bk_ida/gccida/c0/parmlist_tags_warning
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parmlist_tags_warning/src/c-decl.c:5911:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+4h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parmlist_tags_warning/src/c-decl.c:5946:7: error: use of undeclared identifier 'parmlist_tags_warning_already'; did you mean 'parmlist_tags_warning'?
if ( !parmlist_tags_warning_already ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      parmlist_tags_warning
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parmlist_tags_warning/src/c-decl.c:5909:7: note: 'parmlist_tags_warning' declared here
void  parmlist_tags_warning( ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parmlist_tags_warning/src/c-decl.c:5949:1: error: use of undeclared identifier 'parmlist_tags_warning_already'
parmlist_tags_warning_already = 1; 
^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parmlist_tags_warning/src/obj/c-decl.o] Error 1
